# mahlang

./: .gitignore  Makefile  README.md  actions.py  code_interpreter.py  generate_parser.py  input.math  input.mh  input.txt  mah-prev.lang  mah.lang  mah.py  main.py  piaz.lang  piaz.py  piaz.vim  prime_numbers.mh  test3.pz  test5.pz
compiler/: ir_generator.py  lexer.py  parser.py
compiler-generator/: compiler.lang  generate.py
compiler-generator/compiler/: ir_generator.py  (+2 more)
examples/: binary_to_decimal.mh  binary_to_decimal.pz  decimal_to_binary.mh  decimal_to_binary.pz  input.pz  new_decimal_to_binary.mh  new_prime_numbers.mh  prime_numbers.mh  prime_numbers.pz  test1.pz  test10.pz  test2.pz  test4.pz  test6.pz  test7.pz  test8.pz  test9.pz
syntax-highlight/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
syntax-highlight/bindings/c/: tree-sitter-mah.pc.in
syntax-highlight/bindings/go/: binding.go  binding_test.go
syntax-highlight/bindings/node/: binding.cc  index.js
syntax-highlight/bindings/python/tests/: test_binding.py
syntax-highlight/bindings/python/tree_sitter_mah/: __init__.py  binding.c
syntax-highlight/bindings/rust/: build.rs  lib.rs
syntax-highlight/bindings/swift/TreeSitterMah/: mah.h
syntax-highlight/bindings/swift/TreeSitterMahTests/: TreeSitterMahTests.swift
syntax-highlight/queries/mah/: highlights.scm
syntax-highlight/src/: grammar.json  node-types.json  parser.c
templates/: ir_generator.pyt  lexer.pyt  parser.pyt
(+3 files in other folders)
